# hw06-rajrdasani

./: .buildinfo  README.md  dkmlrsgnl  genindex.html  index.ipynb  intro.html  markdown.html  notebooks.html  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  intro.doctree  markdown.doctree  notebooks.doctree
_build/html/: .buildinfo  README.html  genindex.html  hw06-description.html  index.html  intro.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  environment.pickle  hw06-description.doctree  index.doctree  intro.doctree
_build/html/.doctrees/hw6book/: intro.doctree
_build/html/.doctrees/hw6book/_build/jupyter_execute/: notebooks.doctree
_build/html/_sources/: index.ipynb
_build/html/hw6book/: intro.html
_build/html/hw6book/_build/jupyter_execute/: notebooks.html
ligotools/: __init__.py  pcd_plot.py
ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/ligotools/: __init__.py
ligotools/tests/: test_readligo.py  test_utils.py
ligotools/utils/: __init__.py  pcd_plot.py  utils.py
