[metadata]
name             = ligotools
version          = 0.2
author           = Ligo Scientific Collaboration (LSC) and Raj Dasani
author_email     = rajdasani@berkeley.edu
description      = Python library to read LIGO data
keywords         = tools, ligo
classifiers      =
	Programming Language :: Python :: 2.7
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7,
numpy_requires = >= 1.16,
install_requires =
	tqdm